<resources>
    <string name="app_name">Pizza Here</string>
    <string name="start">Start</string>
    <string name="service_not_available" />
    <string name="invalid_lat_long_used" />
    <string name="no_address_found" />
    <string name="stop_tracking_location" />
    <string name="loading" />
    <string name="address_text" />
    <string name="start_tracking_location" />
    <string name="textview_hint" />
    <string name="location_permission_denied" />
    <string name="title_activity_creditos">Creditos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sair">Sair</string>
    <string name="eduardoetaveres">Eduardo Pamaplona de Ataide e Gustavo Tavares</string>
    <string name="Creditos">Créditos</string>
    <string name="localPizzaria">Local Pizzaria</string>
    <string name="Conheca">Conheca nossas casas</string>
    <string name="interroga">\?</string>
    <string name="salvpizza">Salvar Pizza</string>
    <string name="Descartar">Descartar</string>
    <string name="PizzaHere">Pizza Here</string>
    <string name="LocalPizzaria">Local da Pizzaria</string>
    <string name="mkpizza">Faça sua Pizza</string>
    <string name="frang">Frango</string>
    <string name="mil">Milho</string>
    <string name="ovo">Ovo</string>
    <string name="abacaxi">Abacaxi</string>
    <string name="pepe">Peperoni</string>
    <string name="presunto">Presunto</string>
    <string name="fbr">Fabricar Pizza</string>
    <string name="local"> "Endereço: %1$s  \n Latitude: %2$s \n Longitude: %3$s \n Timestamp: %4$tr" </string>
    <string name="Redes1">Rede1</string>
    <string name="Redes2">Rede 2</string>
    <string name="nomes">Eduardo Pamplona de Ataide e Gustavo Tavares Felix</string>
    <string name="creditos">Creditos</string>
</resources>